--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <section>
         <h1>About</h1>
         <p>
-        I'm a junior at Duke University studying mathematics and statistics. I have research and project experience in mining large, public- and private-domain data sets to understand various issues related to human behavior. Broadly, my research interests are in developing and using quantitative methods to learn about societies.
+        I'm a junior at Duke University studying mathematics and statistics. I have research and project experience in mining large, public- and private-domain data sets to understand various issues related to human behavior. At Duke, I work work with Prof. Jichun Xie on genetic association studies and with Prof. Jerry Reiter on survey statistics.
 
         </p>
         <p>
