--- a/index.html
+++ b/index.html
@@ -23,15 +23,16 @@
       <section>
         <h1>About</h1>
         <p>
-        I'm a junior at Duke University studying mathematics and statistics. I have research and project experience in mining large, public- and private-domain data sets to understand various issues related to human behavior. At Duke, I work with Prof. Jichun Xie on whole-genome sequencing and genome-wide association studies and with Prof. Jerry Reiter on survey statistics.
-
+        I'm a junior at Duke University studying mathematics and statistics. At Duke, I work with Prof. Jerry Reiter on survey statistics and differential privacy, Prof. Jichun Xie on whole-genome sequencing and genome-wide association studies and Prof. Nicholas Cook in high-dimensional probability.
         </p>
         <p>
-        Outside of research, I have a strong interest in journalism. I currently serve as news editor for The Chronicle, Duke's independent newspaper, and have a particular interest in covering administrative actions and their associated impact on students and other members of the Duke community.</p> 
+        Outside of research, I have a strong interest in journalism. I served as news editor for The Chronicle, Duke's independent newspaper, and have a particular interest in covering administrative actions and their associated impact on students and other members of the Duke community.</p> 
 
         <p>I am an avid basketball fan and work on the creative team for Duke Men’s Basketball.</p>
 
         <h1>Research</h1>
+
+        <h2>Papers</h2>
 
         <ol>
           <li>Wadekar, A.S. and Reiter, J.P. (2023+) “Evaluating binary outcome classifiers estimated from survey data,” arXiV: <a href="https://arxiv.org/abs/2311.00596">2311.00596</a>.</li>
@@ -39,6 +40,13 @@
           <li>
             Wadekar, A.S. (2020). “<a href="https://doi.org/10.1016/j.drugalcdep.2020.107839">Understanding Opioid Use Disorder using tree-based classifiers.</a>” Drug and Alcohol Dependence, 208, 107839.
           </li>
+        </ol>
+
+        <h2>Ongoing projects</h2>
+
+        <ol>
+          <li>Distinguishability of random simplicial complexes.</li>
+          <li>Applying statistical knockoffs to detect common and rare variants in genome-wide association studies.</li>
         </ol>
 
         <h1>Journalism</h1>
