--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <h1>Adway Wadekar</h1>
         <p>Undergraduate at Duke University</p>
         <p>Contact: <a href="mailto:adway.wadekar@duke.edu">adway.wadekar@duke.edu</a></p>
+        <p><a href="cv.pdf">Curriculum Vitae</a></p>
         <img src="adway.png" />
       </header>
       <section>
