--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <h2>Ongoing projects</h2>
 
         <ol>
-          <li>Distinguishability of random simplicial complexes.</li>
+          <li>Thresholds for distinguishability of random simplicial complexes.</li>
           <li>Applying statistical knockoffs to detect common and rare variants in genome-wide association studies.</li>
         </ol>
 
