--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <section>
         <h1>About</h1>
         <p>
-        I'm a junior at Duke University studying mathematics and statistics. At Duke, I work with Prof. Jerry Reiter on survey statistics and differential privacy, Prof. Jichun Xie on whole-genome sequencing and genome-wide association studies and Prof. Nicholas Cook in high-dimensional probability.
+        I'm a senior at Duke University studying mathematics and statistics. At Duke, I work with Prof. Jerry Reiter on survey statistics and differential privacy, Prof. Jichun Xie on whole-genome sequencing and genome-wide association studies and Prof. Nicholas Cook in high-dimensional probability.
         </p>
         <p>
         Outside of research, I have a strong interest in journalism. I served as news editor for The Chronicle, Duke's independent newspaper, and have a particular interest in covering administrative actions and their associated impact on students and other members of the Duke community.</p> 
