add Epidemiology paper!!!

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <h2>Papers</h2>
 
         <ol>
-          <li>Wadekar, A.S. and Reiter, J.P. (2023+) “Evaluating binary outcome classifiers estimated from survey data,” arXiv: <a href="https://arxiv.org/abs/2311.00596">2311.00596</a>.</li>
+          <li>Wadekar, A.S. and Reiter, J.P. (2023+) “Evaluating binary outcome classifiers estimated from survey data,” accept with minor revisions at Epidemiology. arXiv: <a href="https://arxiv.org/abs/2311.00596">2311.00596</a>.</li>
           <li>Wadekar, A.S. (2020). “<a href="https://dl.acm.org/doi/10.1109/ASONAM49781.2020.9381378">A psychosocial approach to predicting substance use disorder (SUD) among adolescents.</a>” In Proceedings of IEEE/ACM Intl. Conf. on Advances in Social Networks Analysis and Mining, 819-826.</li>
           <li>
             Wadekar, A.S. (2020). “<a href="https://doi.org/10.1016/j.drugalcdep.2020.107839">Understanding Opioid Use Disorder using tree-based classifiers.</a>” Drug and Alcohol Dependence, 208, 107839.
