--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         <ol>
           <li>Thresholds for distinguishability of random simplicial complexes.</li>
-          <li>Applying statistical knockoffs to detect common and rare variants in genome-wide association studies.</li>
+          <li>Applying statistical knockoffs to detect (causal) common variants in genome-wide association studies.</li>
         </ol>
 
         <h1>Journalism</h1>
