--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <section>
         <h1>About</h1>
         <p>
-        I'm a senior at Duke University studying mathematics and statistics. At Duke, I work with Prof. Jerry Reiter on survey statistics and differential privacy, Prof. Jichun Xie on whole-genome sequencing and genome-wide association studies and Prof. Nicholas Cook in high-dimensional probability.
+        I'm a senior at Duke University studying mathematics and statistics. At Duke, I work with Prof. Jerry Reiter in survey statistics and differential privacy, Prof. Jichun Xie in statistical genetics and Prof. Nicholas Cook in high-dimensional probability.
         </p>
         <p>
         Outside of research, I have a strong interest in journalism. I served as news editor for The Chronicle, Duke's independent newspaper, and have a particular interest in covering administrative actions and their associated impact on students and other members of the Duke community.</p> 
@@ -36,7 +36,7 @@
         <h2>Papers</h2>
 
         <ol>
-          <li>Wadekar, A.S. and Reiter, J.P. (2023+) “Evaluating binary outcome classifiers estimated from survey data,” accept with minor revisions at Epidemiology. arXiv: <a href="https://arxiv.org/abs/2311.00596">2311.00596</a>.</li>
+          <li>Wadekar, A.S. and Reiter, J.P. (2023+) “Evaluating binary outcome classifiers estimated from survey data,” Epidemiology (forthcoming). arXiv: <a href="https://arxiv.org/abs/2311.00596">2311.00596</a>.</li>
           <li>Wadekar, A.S. (2020). “<a href="https://dl.acm.org/doi/10.1109/ASONAM49781.2020.9381378">A psychosocial approach to predicting substance use disorder (SUD) among adolescents.</a>” In Proceedings of IEEE/ACM Intl. Conf. on Advances in Social Networks Analysis and Mining, 819-826.</li>
           <li>
             Wadekar, A.S. (2020). “<a href="https://doi.org/10.1016/j.drugalcdep.2020.107839">Understanding Opioid Use Disorder using tree-based classifiers.</a>” Drug and Alcohol Dependence, 208, 107839.
@@ -46,6 +46,7 @@
         <h2>Ongoing projects</h2>
 
         <ol>
+          <li>Differential privacy and verification of parameters using Bayesian prediction intervals.</li>
           <li>Thresholds for distinguishability of random simplicial complexes.</li>
           <li>Applying statistical knockoffs to detect (causal) common variants in genome-wide association studies.</li>
         </ol>
