--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <section>
         <h1>About</h1>
         <p>
-        I'm a senior at Duke University studying mathematics and statistics. I am primarily interested in statistical genomics and bioinformatics, differential privacy and survey statistics, and high-dimennsional probability and statistics. 
+        I'm a senior at Duke University studying mathematics and statistics. I am primarily interested in statistical genetics and bioinformatics, differential privacy, survey statistics and high-dimennsional probability and statistics. 
         </p>
         <p>
         Outside of research, I have a strong interest in journalism. I served as news editor for The Chronicle, Duke's independent newspaper, and have a particular interest in covering administrative actions and their associated impact on students and other members of the Duke community.</p> 
