--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <h2>Ongoing projects</h2>
 
         <ol>
-          <li>Detecting analogues of population stratification and linkage disequlibrium in the exposome.</li>
+          <li>Defining and detecting analogues of population stratification and linkage disequlibrium in the exposome.</li>
           <li>Differential privacy and verification of parameters using Bayesian prediction intervals.</li>
           <li>Testing for geometry in random simplicial complexes constructed in negatively curved spaces.</li>
           <li>Applying statistical knockoffs to detect (causal) common variants in genome-wide association studies.</li>
