--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <p>
         I'm a senior at Duke University studying mathematics and statistics. I am interested in a broad array of statistical topics, including statistical genetics, missing data, survey statistics, differential privacy and applications to the biomedical and social sciences. On the more mathematical side, I have a growing interest in high-dimensional probability and related topics (concentration, random matrices, etc.).
         </p>
-        <p>At Duke, I am currently working with Profs. Jerry Reiter, Jichun Xie and Nicholas Cook. I also work with Prof. Chirag Patel at Harvard Medical School.</p>
+        <p>At Duke, I am currently working with Profs. Jerry Reiter, Jichun Xie and Nicholas Cook. I also work in <a href="http://chiragjpgroup.org" target = "_blank">Prof. Chirag Patel's group</a> at Harvard Medical School.</p>
         <p>
         Outside of research, I have a strong interest in journalism. I served as news editor for The Chronicle, Duke's independent newspaper, and have a particular interest in covering administrative actions and their associated impact on students and other members of the Duke community.</p> 
 
