--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <h2>Papers</h2>
 
         <ol>
-          <li>Wadekar, A.S. and Reiter, J.P. (2024). “Evaluating binary outcome classifiers estimated from survey data,” Epidemiology (forthcoming). arXiv: <a href="https://arxiv.org/abs/2311.00596">2311.00596</a>.</li>
+          <li>Wadekar, A.S. and Reiter, J.P. (2024). “<a href="https://journals.lww.com/epidem/abstract/9900/evaluating_binary_outcome_classifiers_estimated.291.aspx">Evaluating binary outcome classifiers estimated from survey data.”</a> Epidemiology (forthcoming).</li>
           <li>Wadekar, A.S. (2020). “<a href="https://dl.acm.org/doi/10.1109/ASONAM49781.2020.9381378">A psychosocial approach to predicting substance use disorder (SUD) among adolescents.</a>” In Proceedings of IEEE/ACM Intl. Conf. on Advances in Social Networks Analysis and Mining, 819-826.</li>
           <li>
             Wadekar, A.S. (2020). “<a href="https://doi.org/10.1016/j.drugalcdep.2020.107839">Understanding Opioid Use Disorder using tree-based classifiers.</a>” Drug and Alcohol Dependence, 208, 107839.
@@ -47,7 +47,7 @@
         <h2>Ongoing projects</h2>
 
         <ol>
-          <li>Defining polyexposomic risk scores and developing estimation methods using summary statistics.</li>
+          <li>Defining proteomic risk scores and developing estimation methods using summary statistics.</li>
           <li>Differential privacy and verification of parameters using Bayesian prediction intervals.</li>
           <li>Testing for geometry in random simplicial complexes constructed in negatively curved spaces.</li>
           <li>Applying statistical knockoffs to detect (causal) common variants in genome-wide association studies.</li>
