--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </p>
         <p>At Duke, I am currently working with Profs. Jerry Reiter, Jichun Xie and Nicholas Cook. I also work in <a href="http://chiragjpgroup.org" target = "_blank">Prof. Chirag Patel's group</a> at Harvard Medical School.</p>
         <p>
-        Outside of research, I have a strong interest in journalism. I served as news editor for The Chronicle, Duke's independent newspaper, and have a particular interest in covering administrative actions and their associated impact on students and other members of the Duke community.</p> 
+        Outside of research, I have a strong interest in journalism and worked as a news reporter and editor for The Chronicle, Duke's independent newspaper.</p> 
 
         <p>I am an avid basketball fan and work on the creative team for Duke Men’s Basketball.</p>
 
