--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <section>
         <h1>About</h1>
         <p>
-        I'm a senior at Duke University studying mathematics and statistics. I am interested in a broad array of statistical topics, including statistical genetics, missing data, survey statistics, differential privacy and applications to the biomedical and social sciences. On the more mathematical side, I have a growing interest in high-dimensional probability and related topics (concentration, random matrices, etc.).
+        I'm a senior at Duke University studying mathematics and statistics. I am interested in a broad array of statistical topics, including statistical genetics, missing data, survey statistics, differential privacy and applications to the biomedical and social sciences. On the more mathematical side, I have a growing interest in high-dimensional probability and algebraic and geometric statistics.
         </p>
         <p>At Duke, I am currently working with Profs. Jerry Reiter, Jichun Xie and Nicholas Cook. I also work in <a href="http://chiragjpgroup.org" target = "_blank">Prof. Chirag Patel's group</a> at Harvard Medical School.</p>
         <p>
