add research stuff

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1>Adway Wadekar</h1>
         <p>Undergraduate at Duke University</p>
         <p>Contact: <a href="mailto:adway.wadekar@duke.edu">adway.wadekar@duke.edu</a></p>
-        <p><a href="cv.pdf">Curriculum Vitae</a></p>
+        <p><a href="docs/cv.pdf">Curriculum Vitae</a></p>
         <img src="adway.png" />
       </header>
       <section>
@@ -26,7 +26,7 @@
         <p>
         I'm a senior at Duke University studying mathematics and statistics. I am interested in a broad array of statistical topics, including statistical genetics, missing data, survey statistics, differential privacy and applications to the biomedical and social sciences. On the more mathematical side, I have a growing interest in high-dimensional probability and algebraic and geometric statistics.
         </p>
-        <p>At Duke, I am currently working with Profs. Jerry Reiter, Jichun Xie and Nicholas Cook. I also work in <a href="http://chiragjpgroup.org" target = "_blank">Prof. Chirag Patel's group</a> at Harvard Medical School.</p>
+        <p>At Duke, I am currently working with Profs. <a href = "https://www2.stat.duke.edu/~jerry/" target="_blank">Jerry Reiter</a> and <a href = "https://jichunxie.github.io/index.html" target="_blank">Jichun Xie</a>. I also work with Prof. <a href="http://chiragjpgroup.org" target = "_blank">Chirag Patel</a> at Harvard Medical School.</p>
         <p>
         Outside of research, I have a strong interest in journalism and worked as a news reporter and editor for The Chronicle, Duke's independent newspaper.</p> 
 
@@ -48,7 +48,7 @@
 
         <ol>
           <li>Defining proteomic risk scores and developing estimation methods using summary statistics.</li>
-          <li>Differential privacy and verification of parameters using Bayesian prediction intervals.</li>
+          <li><a href="docs/missing_data.pdf">Decision analyses in the presence of missing data</a>.</li>
           <li>Testing for geometry in random simplicial complexes constructed in negatively curved spaces.</li>
           <li>Applying statistical knockoffs to detect (causal) common variants in genome-wide association studies.</li>
         </ol>
