--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <h2>Ongoing projects</h2>
 
         <ol>
-          <li>Defining proteomic risk scores and developing estimation methods using summary statistics.</li>
+          <li>Towards nonlinear proteomic risk scores for quantitative phenotypes at biobank scale.</li>
           <li><a href="docs/missing_data.pdf">Decision analyses in the presence of missing data</a>.</li>
           <li>Testing for geometry in random simplicial complexes constructed in negatively curved spaces.</li>
           <li>Applying statistical knockoffs to detect (causal) common variants in genome-wide association studies.</li>
