--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <p>
         I'm a senior at Duke University studying mathematics and statistics. I am interested in a broad array of statistical topics, including statistical genetics, missing data, survey statistics, differential privacy and applications to the biomedical and social sciences. On the more mathematical side, I have a growing interest in high-dimensional probability and algebraic and geometric statistics.
         </p>
-        <p>At Duke, I am currently working with Profs. <a href = "https://www2.stat.duke.edu/~jerry/" target="_blank">Jerry Reiter</a> and <a href = "https://jichunxie.github.io/index.html" target="_blank">Jichun Xie</a>. I also work with Prof. <a href="http://chiragjpgroup.org" target = "_blank">Chirag Patel</a> at Harvard Medical School.</p>
+        <p>At Duke, I am currently working with Profs. <a href = "https://www2.stat.duke.edu/~jerry/" target="_blank">Jerry Reiter</a> and <a href = "https://jichunxie.github.io/index.html" target="_blank">Jichun Xie</a>. I also work with Prof. <a href="https://www.chiragjpgroup.org" target = "_blank">Chirag Patel</a> at Harvard Medical School.</p>
         <p>
         Outside of research, I have a strong interest in journalism and worked as a news reporter and editor for The Chronicle, Duke's independent newspaper.</p> 
 
@@ -37,7 +37,7 @@
         <h2>Papers</h2>
 
         <ol>
-          <li>Wadekar, A.S. and Reiter, J.P. (2024). “<a href="https://journals.lww.com/epidem/abstract/9900/evaluating_binary_outcome_classifiers_estimated.291.aspx">Evaluating binary outcome classifiers estimated from survey data.”</a> Epidemiology (forthcoming).</li>
+          <li>Wadekar, A.S. and Reiter, J.P. (2024). “<a href="https://journals.lww.com/epidem/abstract/9900/evaluating_binary_outcome_classifiers_estimated.291.aspx">Evaluating binary outcome classifiers estimated from survey data.”</a> Epidemiology, 35(6), pp. 805-812.</li>
           <li>Wadekar, A.S. (2020). “<a href="https://dl.acm.org/doi/10.1109/ASONAM49781.2020.9381378">A psychosocial approach to predicting substance use disorder (SUD) among adolescents.</a>” In Proceedings of IEEE/ACM Intl. Conf. on Advances in Social Networks Analysis and Mining, 819-826.</li>
           <li>
             Wadekar, A.S. (2020). “<a href="https://doi.org/10.1016/j.drugalcdep.2020.107839">Understanding Opioid Use Disorder using tree-based classifiers.</a>” Drug and Alcohol Dependence, 208, 107839.
