add cv and update site

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         <p>
         I'm a senior at Duke University studying mathematics and statistics. I am interested in a broad array of statistical topics, including statistical genetics, missing data, survey statistics, differential privacy and applications to the biomedical and social sciences. On the more mathematical side, I have a growing interest in high-dimensional probability and algebraic and geometric statistics.
         </p>
-        <p>At Duke, I am currently working with Profs. <a href = "https://www2.stat.duke.edu/~jerry/" target="_blank">Jerry Reiter</a> and <a href = "https://jichunxie.github.io/index.html" target="_blank">Jichun Xie</a>. I also work with Prof. <a href="https://www.chiragjpgroup.org" target = "_blank">Chirag Patel</a> at Harvard Medical School.</p>
+        <p>At Duke, I am fortunate to work with Prof. Jerry Reiter, Prof. Jichun Xie and Prof. Ezra Miller. I also work with Prof. Chirag Patel at Harvard Medical School.
         <p>
-        Outside of research, I have a strong interest in journalism and worked as a news reporter and editor for The Chronicle, Duke's independent newspaper.</p> 
+        Outside of research, I have a strong interest in journalism and worked as a news reporter and editor for The Chronicle, Duke's student-run newspaper.</p> 
 
         <p>I am an avid basketball fan and work on the creative team for Duke Men’s Basketball.</p>
 
