--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <p>
         I'm a senior at Duke University studying mathematics and statistics. I am interested in a broad array of statistical topics, including statistical genetics, missing data, survey statistics, differential privacy and applications to the biomedical and social sciences. On the more mathematical side, I have a growing interest in high-dimensional probability and algebraic and geometric statistics.
         </p>
-        <p>At Duke, I am fortunate to work with Prof. Jerry Reiter, Prof. Jichun Xie and Prof. Ezra Miller. I also work with Prof. Chirag Patel at Harvard Medical School.
+        <p>At Duke, I am very fortunate to work with Prof. <a href="">Jerry Reiter</a>, Prof. Jichun Xie and Prof. Ezra Miller. I also work with Prof. Chirag Patel at Harvard Medical School.
         <p>
         Outside of research, I have a strong interest in journalism and worked as a news reporter and editor for The Chronicle, Duke's student-run newspaper.</p> 
 
@@ -48,7 +48,7 @@
 
         <ol>
           <li>Discovering nonlinear effects between protein expression and quantitative phenotypes at biobank scale.</li>
-          <li><a href="docs/bayes_astat.pdf">Towards Bayesian formulations in algebraic statistics.</a></li>
+          <li><a href="docs/bayes_astat.pdf">Toric geometry of Bayesian log-linear models.</a></li>
           <li><a href="docs/missing_data.pdf">Decision analyses in the presence of missing data</a>.</li>
           <li>Applying statistical knockoffs to detect (causal) common variants in genome-wide association studies.</li>
         </ol>
