--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <p>
         I'm a senior at Duke University studying mathematics and statistics. I am interested in a broad array of statistical topics, including statistical genetics, missing data, survey statistics, differential privacy and applications to the biomedical and social sciences. On the more mathematical side, I have a growing interest in high-dimensional probability and algebraic and geometric statistics.
         </p>
-        <p>At Duke, I am very fortunate to work with Prof. <a href="">Jerry Reiter</a>, Prof. Jichun Xie and Prof. Ezra Miller. I also work with Prof. Chirag Patel at Harvard Medical School.
+        <p>At Duke, I am very fortunate to work with Prof. Jerry Reiter, Prof. Jichun Xie and Prof. Ezra Miller. I also work with Prof. Chirag Patel at Harvard Medical School.
         <p>
         Outside of research, I have a strong interest in journalism and worked as a news reporter and editor for The Chronicle, Duke's student-run newspaper.</p> 
 
@@ -37,6 +37,7 @@
         <h2>Papers</h2>
 
         <ol>
+          <li>Wadekar, A.S. and Reiter, J.P. (2025+). Assessing Decision-Making Confidence in the Presence of Data Uncertainty. (working paper, draft available).</li>
           <li>Wadekar, A.S. and Reiter, J.P. (2024). “<a href="https://journals.lww.com/epidem/abstract/9900/evaluating_binary_outcome_classifiers_estimated.291.aspx">Evaluating binary outcome classifiers estimated from survey data.”</a> Epidemiology, 35(6), pp. 805-812.</li>
           <li>Wadekar, A.S. (2020). “<a href="https://dl.acm.org/doi/10.1109/ASONAM49781.2020.9381378">A psychosocial approach to predicting substance use disorder (SUD) among adolescents.</a>” In Proceedings of IEEE/ACM Intl. Conf. on Advances in Social Networks Analysis and Mining, 819-826.</li>
           <li>
@@ -49,7 +50,6 @@
         <ol>
           <li>Discovering nonlinear effects between protein expression and quantitative phenotypes at biobank scale.</li>
           <li><a href="docs/bayes_astat.pdf">Toric geometry of Bayesian log-linear models.</a></li>
-          <li><a href="docs/missing_data.pdf">Decision analyses in the presence of missing data</a>.</li>
           <li>Applying statistical knockoffs to detect (causal) common variants in genome-wide association studies.</li>
         </ol>
 
